# Currency-rates

./: .flake8  README.md  pyproject.toml
currency_rates/: manage.py
currency_rates/currency_rates/: asgi.py  settings.py  urls.py  wsgi.py
currency_rates/full_rest_api/: apps.py  urls.py
currency_rates/full_rest_api/nbrb/: filter_parameters.py  serializers.py  urls_public.py  views.py
